# shannon-platform

./: .gitignore  README.md  pyproject.toml
shannon_platform/: __main__.py
shannon_platform/base/: notification_center.py  observer.py
shannon_platform/connection/: serial.py
shannon_platform/model/: bot.py  security.py  sensor.py  switch.py
shannon_platform/network/: bluetooth.py  serial.py
shannon_platform/routes/: bots.py  security.py  sensors.py  switches.py
shannon_platform/service/: bluetooth.py  serial.py
shannon_platform/services/: bluetooth.py  serial.py
tests/: test_shannon_platform.py
