[tool.poetry]
name = "shannon-platform"
version = "0.0.1-beta.1"
description = "Shannon Home Automation Platform"
authors = ["Kiarash Kiani <hi@kiarash.info>"]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.1.0"
pyserial = "^3.5"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
